# copyright-checker-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml
copyright_checker/: checker.py  exceptions.py
scripts/: utils.py
scripts/commit_message_checker/: checker.py
scripts/copyright_checker/: checker.py
tests/: conftest.py  test_checker.py  test_copyright_checker.py
