[metadata]
name = copyight_checker_pre_commit
version = 0.0.1
description = pre-commit hook which check copyright text in code files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slivetssergey/copyright-checker-pre-commit
author = Sergey Slivets
author_email = slivetssergey@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    copyright-check = copyright_checker.checker:check

[bdist_wheel]
universal = True
