[metadata]
name = pre-commit-hooks
version = 1.1.0-rc.0
description = extra pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slivetssergey/pre-commit-hooks
author = Sergey Slivets
author_email = slivetssergey@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    copyright-check = scripts.copyright_checker.checker:check
    commit-message-check = scripts.commit_message_checker.checker:check

[bdist_wheel]
universal = True
